replace old directed graph system with a new system. with arrows. and elliptical arc paths. and correctly iterate through nodes and edges twice so that dom is correctly populated. these commits are too big. eit.

--- a/static/css/meta_index.less
+++ b/static/css/meta_index.less
@@ -21,3 +21,26 @@ button {
 #hidden {
   display: none;
 }
+
+path.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
+
+rect {
+  fill: #ccc;
+  stroke: #333;
+  stroke-width: 1.5px;
+}
+
+text {
+  font: 10px sans-serif;
+  pointer-events: none;
+}
+
+text.shadow {
+  stroke: #fff;
+  stroke-width: 3px;
+  stroke-opacity: .8;
+}
